--- a/app/src/main/res/layout/activity_verify_phone_number.xml
+++ b/app/src/main/res/layout/activity_verify_phone_number.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login.VerifyPhoeNumberActivity"
+    tools:context=".Login.VerifyPhoneNumberActivity"
     android:background="@color/colorPrimaryLight"
     >
 
@@ -105,6 +105,7 @@ will be detect automatically but if it is not then you can add it manually too."
     </LinearLayout>
 
     <Button
+        android:id="@+id/verifyButtonId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/otp"
@@ -114,5 +115,15 @@ will be detect automatically but if it is not then you can add it manually too."
         android:layout_marginRight="16dp"
         android:text="verify"
         android:fontFamily="@font/playfair_display"
+        android:onClick="otpEntered"
+        />
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/progressbar"
+        android:visibility="gone"
         />
 </RelativeLayout>
