--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -8,7 +8,7 @@
         android:id="@+id/settings"
         android:title="Settings" />
     <item
-        android:id="@+id/menu_logout"
+        android:id="@+id/logout"
         android:title="Logout"
         />
 
