Dark Theme and Speech Recognition

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Login.LoginActivity"
-    android:background="@color/colorPrimaryLight"
+    android:background="?attr/colorPrimary"
     >
 
 
@@ -16,8 +16,7 @@
         android:layout_marginTop="150dp"
         android:fontFamily="@font/playfair_display"
         android:text="Login"
-        android:textColor="#000"
-        android:textSize="40sp" />
+        android:textSize="40sp"/>
 
 
     <EditText
@@ -36,7 +35,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_background"
+        android:background="?attr/colorPrimaryDark"
         android:text="Login"
         android:layout_below="@id/phoneNumber"
         android:layout_marginLeft="16dp"
