--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     >
 
-    <gradient android:startColor="@color/colorPrimary"
-        android:endColor="@color/colorPrimary"
+    <gradient android:startColor="?attr/colorPrimaryDark"
+        android:endColor="?attr/colorPrimaryDark"
         />
 
     <corners android:radius="10dp"
