--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,16 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Settings.SettingsActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="?attr/colorPrimary">
 
-    <androidx.appcompat.widget.Toolbar
+    <Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/toolbar"
-        android:background="@color/colorPrimary"
+        android:background="?attr/colorPrimaryDark"
+        android:titleTextColor="?attr/actionMenuTextColor"
         >
 
-    </androidx.appcompat.widget.Toolbar>
+    </Toolbar>
 
     <FrameLayout
         android:layout_width="match_parent"
