--- a/app/src/main/res/layout/activity_verify_phone_number.xml
+++ b/app/src/main/res/layout/activity_verify_phone_number.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Login.VerifyPhoneNumberActivity"
-    android:background="@color/colorPrimaryLight"
+    android:background="?attr/colorPrimary"
     >
 
     <TextView
