--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,15 +1,25 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/LightcolorPrimary</item>
+        <item name="colorPrimaryDark">@color/LightcolorPrimaryDark</item>
+        <item name="colorAccent">@color/LightcolorAccent</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:textColorPrimary">#000</item>
+        <item name="actionMenuTextColor">#000</item>
+        <item name="android:statusBarColor">@color/LightcolorPrimaryDark</item>
+        <item name="editTextBackground">@color/LighteditTextBackground</item>
     </style>
 
-    <style name="Theme.MyApp" parent="Theme.MaterialComponents.DayNight">
-
+    <style name="Dark_Theme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/DarkcolorPrimary</item>
+        <item name="colorPrimaryDark">@color/DarkcolorPrimary</item>
+        <item name="colorAccent">@color/DarkcolorAccent</item>
+        <item name="android:textColor">#fff</item>
+        <item name="android:textColorPrimary">#fff</item>
+        <item name="android:statusBarColor">@color/DarkcolorPrimaryDark</item>
+        <item name="editTextBackground">@color/DarkeditTextBackground</item>
     </style>
 
 </resources>
