--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,78 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChatActivity"
-    android:id="@+id/relativeLayout">
+    android:id="@+id/drawerLayout"
+    tools:openDrawer="start">
 
-    <Toolbar
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:id="@+id/toolbar"
-        android:background="?attr/colorPrimary"
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/conversation"
-        android:layout_below="@id/toolbar"
-        />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/messageInput"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:orientation="horizontal"
-        android:padding="5dp"
-        android:layout_alignParentBottom="true"
-        >
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/mic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:backgroundTint="@color/colorPrimaryDark"
-            android:src="@drawable/mic"
-            app:fabSize="mini"
-            android:onClick="speechtotext"/>
+        android:layout_height="match_parent"
+        android:id="@+id/relativeLayout">
 
 
-        <EditText
-            android:id="@+id/userInput"
+
+        <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
-            android:layout_weight="2"
-            android:background="@drawable/rounded"
-            android:fontFamily="@font/playfair_display"
-            android:hint="Type a message here..."
-            android:inputType="textMultiLine|textCapSentences"
-            android:maxLines="5"
-            android:minHeight="40dp"
-            android:minLines="1"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:text="hello world"
-            android:textColorHint="?attr/editTextColor"
-            android:textSize="20sp" />
+            android:layout_alignParentStart="true"
+            android:id="@+id/toolbar"
+            android:background="?attr/colorPrimary"
+            />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/conversation"
+            android:layout_below="@id/toolbar"
+            />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/messageInput"
             android:layout_marginStart="8dp"
-            android:backgroundTint="@color/colorPrimaryDark"
-            android:src="@drawable/send_icon"
-            app:fabSize="mini"
-            android:onClick="sendMessage"/>
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:orientation="horizontal"
+            android:padding="5dp"
+            android:layout_alignParentBottom="true"
+            >
 
-    </LinearLayout>
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/mic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:backgroundTint="@color/colorPrimaryDark"
+                android:src="@drawable/mic"
+                app:fabSize="mini"
+                android:onClick="speechtotext"/>
 
-</RelativeLayout>
+
+            <EditText
+                android:id="@+id/userInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:layout_weight="2"
+                android:background="@drawable/rounded"
+                android:fontFamily="@font/playfair_display"
+                android:hint="Type a message here..."
+                android:inputType="textMultiLine|textCapSentences"
+                android:maxLines="5"
+                android:minHeight="40dp"
+                android:minLines="1"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="hello world"
+                android:textColorHint="?attr/editTextColor"
+                android:textSize="20sp" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:backgroundTint="@color/colorPrimaryDark"
+                android:src="@drawable/send_icon"
+                app:fabSize="mini"
+                android:onClick="sendMessage"/>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:menu="@menu/navigation_menu"
+        android:id="@+id/navigationView"
+        app:headerLayout="@layout/headerlayout"
+        android:layout_gravity="start"
+        />
+
+</androidx.drawerlayout.widget.DrawerLayout>
